python-saharaclient (0.12.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * d/control: Align (Build-)Depends with upstream.
  * d/control: Add python-sphinx-argparse to Build-Depends.
  * d/p/drop-doc-conf-git.patch: Drop git from sphinx config file
    file as git repository is not avialable during package builds.

 -- Corey Bryant <corey.bryant@canonical.com>  Mon, 29 Feb 2016 09:30:09 -0500

python-saharaclient (0.11.1-3) unstable; urgency=medium

  * Removed files failing unit test discovery with newer novaclient:
    - saharaclient/tests/integration/tests/test_vanilla.py
    - saharaclient/tests/integration/tests/test_vanilla2.py
    - saharaclient/tests/integration/tests/test_hdp.py

 -- Thomas Goirand <zigo@debian.org>  Mon, 25 Jan 2016 18:10:33 +0000

python-saharaclient (0.11.1-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 22:34:12 +0000

python-saharaclient (0.11.1-1) experimental; urgency=medium

  * New upstream release.
  * d/control: Align dependencies and versions with upstream.
  * d/control: Update uploaders.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 24 Sep 2015 14:36:59 -0400

python-saharaclient (0.10.1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 07 Sep 2015 14:15:42 +0200

python-saharaclient (0.9.1-1) experimental; urgency=medium

  * Team upload.
  * New upstream release:
    - d/control: Align dependencies and versions with upstream.

 -- James Page <james.page@ubuntu.com>  Tue, 23 Jun 2015 11:54:41 +0100

python-saharaclient (0.8.0-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Reviewed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 25 Dec 2014 23:23:00 +0800

python-saharaclient (0.7.3-1) experimental; urgency=medium

  * New upstream release.