@@ -11,6 +11,10 @@ Build-Depends: debhelper (>= 9),
                python-pbr (>= 1.8),
                python-setuptools,
                python-sphinx,
+               python3-all,
+               python3-pbr (>= 1.8),
+               python3-setuptools,
+               python3-sphinx,
 Build-Depends-Indep: python-babel,
                      python-cliff (>= 1.15.0),
                      python-coverage,
@@ -34,6 +38,28 @@ Build-Depends-Indep: python-babel,
                      python-sphinx-argparse,
                      python-swiftclient (>= 1:2.2.0),
                      python-tempest-lib (>= 0.14.0),
+                     python3-babel,
+                     python3-cliff (>= 1.15.0),
+                     python3-coverage,
+                     python3-hacking (>= 0.10.0),
+                     python3-keystoneauth1 (>= 2.1.0),
+                     python3-keystoneclient (>= 1:1.6.0),
+                     python3-mock (>= 1.3),
+                     python3-neutronclient (>= 1:2.6.0),
+                     python3-novaclient (>= 2:2.29.0),
+                     python3-openstackclient (>= 2.0.0),
+                     python3-oslo.config (>= 1:3.4.0),
+                     python3-oslo.i18n (>= 2.1.0),
+                     python3-oslo.log (>= 1.14.0),
+                     python3-oslo.serialization (>= 1.10.0),
+                     python3-oslo.utils (>= 3.4.0),
+                     python3-prettytable (>= 0.7),
+                     python3-requests (>= 2.8.1),
+                     python3-requests-mock (>= 0.7.0),
+                     python3-six (>= 1.9.0),
+                     python3-sphinx-argparse,
+                     python3-swiftclient (>= 1:2.2.0),
+                     python3-tempest-lib (>= 0.14.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
@@ -58,13 +84,42 @@ Depends: python-babel (>= 1.3),
          python-six (>= 1.9.0),
          ${misc:Depends},
          ${python:Depends},
-Description: Client library for Openstack Sahara API server - Python 2.x module
+Description: Client library for Openstack Sahara API server - Python 2.7 module
  Sahara aims to provide users with simple means to provision a Hadoop cluster
  by specifying several parameters like Hadoop version, cluster topology, nodes
  hardware details and a few more.
  .
  This is a client for the Sahara which uses the OpenStack Image API. There's a
  Python API (the "saharaclient" module), and a command-line script ("sahara").
+ .
+ This package provides the Python 2.7 module.
+
+Package: python3-saharaclient
+Architecture: all
+Depends: python3-babel (>= 1.3),
+         python3-cliff (>= 1.15.0),
+         python3-keystoneauth1 (>= 2.1.0),
+         python3-keystoneclient (>= 1:1.6.0),
+         python3-openstackclient (>= 2.0.0),
+         python3-oslo.i18n (>= 2.1.0),
+         python3-oslo.log (>= 1.14.0),
+         python3-oslo.serialization (>= 1.10.0),
+         python3-oslo.utils (>= 3.4.0),
+         python3-pbr (>= 1.8),
+         python3-prettytable (>= 0.7),
+         python3-requests (>= 2.8.1),
+         python3-six (>= 1.9.0),
+         ${misc:Depends},
+         ${python3:Depends},
+Description: Client library for Openstack Sahara API server - Python 3.x module
+ Sahara aims to provide users with simple means to provision a Hadoop cluster
+ by specifying several parameters like Hadoop version, cluster topology, nodes
+ hardware details and a few more.
+ .
+ This is a client for the Sahara which uses the OpenStack Image API. There's a
+ Python API (the "saharaclient" module), and a command-line script ("sahara").
+ .
+ This package provides the Python 3.x module.
 
 Package: python-saharaclient-doc
 Architecture: all
