@@ -3,6 +3,7 @@ python-saharaclient (0.12.0-1) UNRELEASED; urgency=medium
   * New upstream release.
   * d/control: Align (Build-)Depends with upstream.
   * d/control: Add python-sphinx-argparse to Build-Depends.
+  * d/control, d/rules: Add Python3 support.
   * d/p/drop-doc-conf-git.patch: Drop git from sphinx config file
     file as git repository is not avialable during package builds.
 
